# accelerators

./: .cproject  .gitignore  README.md  bit_masking.cc  build_opencv.sh  to-npp-cc.py  trouble0_updates.txt  trouble1_arch_add.txt
cc/: CMakeLists.txt
cc/source/async-parallel/: thread_pools.cc  thread_pools.h
cc/source/time_triggered_arch/scheduler/: coOperativeScheduler.c
cc/tests/: coOperativeSchedulerTest.cc
cc/tests/units/async-parallel/: pools_test.cc
core/: a.app
core/patterns/patterns_parall_from_microsoft/: patterns_parall.sln
cuda/: .cproject  square.cu  square.exp  square.lib
cuda/HW1/: HW1.vcproj
cuda/HW1/x64/release_x64/: HW1.device-link.options
cuda/book/: .cproject  book.cu  ch1  ch1.cu
cuda/book/Release/: makefile  sources.mk  subdir.mk
cuda/opencv_test_app/: ReadMe.txt  opencv_test_app.cpp  opencv_test_app.vcproj  stdafx.cpp
cuda/sln-vs08-sp1/: sln-vs08-sp1.ncb  sln-vs08-sp1.sln  sln-vs08-sp1.vcproj
cuda/sln-vs08-sp1/Debug/: BuildLog.htm  mt.dep  sln-vs08-sp1.device-link.options  sln-vs08-sp1.ilk
cuda/sln-vs08-sp1/HW1/: HW1.vcproj
cuda/sln-vs08-sp1/HW1/x64/Debug/: HW1.device-link.options
cuda/sln-vs08-sp1/HW1/x64/release_x64/: HW1.device-link.options
cuda/slns/: .cproject  .project
cuda/slns/Debug/: hw1_test.d  hw2_test.d  launcher.d  makefile  nsight_test  opencv_test_app.d  reuse.d  sources.mk  splitters.d  splitters_test.d  subdir.mk  xD_test.d  xd.d
cuda/slns/Debug/HW1/: hw1_kernels.d  subdir.mk
cuda/slns/Debug/HW2/: hw2_kernels.d  subdir.mk
cuda/slns/Debug/reuse/: compare.d  subdir.mk  utils.d
cuda/src/: hw1_test.cc  hw2_test.cc  launcher.cc  opencv_test_app.cc  splitters.cc  splitters.h  splitting_test.cc  xD_test.cc  xd.cu
cuda/src/Unit3 Code Snippets/: a.out  float_ops.h  reduce.cu  reduce_min.cu  scan.cu
cuda/src/Unit4 Code Snippets/: compact.cu
cuda/src/Unit4 Code Snippets/compact/: bin
cuda/src/cc/: hw2_test.cc
cuda/src/cs344/HW3/: CMakeCache.txt  CMakeLists.txt  HW3  student_func.cu
cuda/src/cs344/Unit3 Code Snippets/: a.out  reduce.cu
cuda/src/cs344/summary/: reference_calc.cc
cuda/src/cuda/: hw2_kernels.cu
cuda/src/hw1/: hw1_test.cc  reference_hw1.cpp
cuda/test_nsight_cuda_runtime_project/: a.out
cuda_nvidia_course/slns-win/sln-vs08-sp1/HW1/Debug/: HW1.device-link.options
cuda_nvidia_course/slns-win/sln-vs08-sp1/HW1/x64/Debug/: HW1.device-link.options  homework2.device-link.options
cuda_nvidia_course/slns-win/sln-vs08-sp1/HW1/x64/debug_x64/: HW1.device-link.options
cuda_nvidia_course/slns-win/sln-vs08-sp1/HW1/x64/release_x64/: BAT00000A5732524.bat  HW1.device-link.options  homework2.device-link.options
cuda_nvidia_course/slns-win/sln-vs08-sp1/cuda_env_test/x64/Release/: cuda_env_test.device-link.options
design/: trouble1_in_memory_store.txt
doc/: async_api.txt  trouble1_in_memory_store.txt
executors/: ReadMe.md
export/actors_and_workers/: actors.h  actors_cc11.h  safe_queue.h
learn_tricks/: Makefile  a.app  learn_tricks.pro
my-cs344/cs344/HW4/: Makefile
my-cs344/cs344/Unit4 Code Snippets/: compact.cu  scan.cu
projects/actors_and_pools/: CMakeLists.txt
projects/actors_and_pools/doc/: async_api.txt  notes.txt  trouble1_in_memory_store.txt  trouble2_arch.txt  ya_tech_talk_and_chromium.txt
projects/actors_and_pools/source/actors_and_workers/: actors.h  actors_cc11.h  actors_cc98.h  arch.h  safe_queue_cc11.h
projects/actors_and_pools/source/pools/: actors.h  thread_pools.cc
projects/actors_and_pools/tests/: actors.h  actors_test.cc  async_api_test.cc  future_folly_test.cc  futures_test.cc  pools_test.cc  sutter_ver_test.cc
projects/actors_and_workers/: CMakeLists.txt
projects/adapt-chromium-base/: CMakeLists.txt
projects/adapt_chromium_base/: CMakeLists.txt
projects/parallel_ds/: safe_queue.h
projects/patterns/: notes.txt
projects/pools/: CMakeLists.txt
projects/pools/tests/: actors_test.cc  pools_test.cc
projects/schedulers/: CMakeLists.txt
projects/schedulers/tests/: asio_and_threading_test.cc
projects/tbb_only/: CMakeLists.txt
projects/tbb_only/tests/: struct_conc_test.cc
projects/x64-boost-only/: CMakeLists.txt
projects/x64-boost-only/source/async-parallel/: thread_pools.cc  thread_pools.h
projects/x64-boost-only/tests/units/: actors_test.cc
projects/x64-boost-only/tests/units/async-parallel/: queue_test.cc
projects/x64_boost_only/: CMakeLists.txt
projects_adaptations/boost_asio_as_engine/: .cproject  .project  a.out
projects_deep/: design.md
projects_spacial_cases/actors_and_workers/tests/sean_parent/: concurrency-talk.cpp
projects_spacial_cases_dark_place/: mechs_global.md
projects_spacial_cases_dark_place/actors_and_workers/doc/: trouble1_in_memory_store.txt
scala_projects/: W3.scala  trouble0_bank.txt
scala_projects/akka-tutorial-first-java/: pom.xml
scala_projects/akka-tutorial-first-java/src/main/java/akka/tutorial/first/java/: App.java
scala_projects/course_reactive/: pom.xml
scala_projects/course_reactive/src/test/scala/: AppTest.scala  RecapTest.scala  RxTest.scala
scala_projects/hello/: W1.scala  W2.scala  W4.scala  W5.scala
scala_projects/scala-helloworld/: pom.xml
scala_projects/scala-helloworld/src/main/scala/org/glassfish/samples/: App.scala
schedulers/cc/: CMakeLists.txt
schedulers/cc/sources/time_triggered_arch/canary/logical_devices/: dvrOnBoardPreaml.c
schedulers/cc/sources/time_triggered_arch/canary/scheduler/: coOperativeScheduler.c
schedulers/cc/sources/time_triggered_arch/canary/scheduler_raw/: sch51.c  sch52.h
schedulers/cc/sources/time_triggered_arch/canary/tasks/: offChain.c  onChain.c
schedulers/cc/sources/time_triggered_arch/canary/vm/: virtualDvrPreampl.c  vm.c
schedulers/cc/tests/: coOperativeSchedulerTest.cc
simd/: Makefile_neon.mk  Makefile_sse.mk  avx  avx_blurring.cc  benchmark_chosen.cc  docs.txt  neon  neon.c  sse  sse.cc
tmp/: to-npp-cc.py
